Fix some layout issue in fullscreen mode

--- a/assets/styles/admin.scss
+++ b/assets/styles/admin.scss
@@ -88,7 +88,7 @@ body.axisbuilder-noscroll-box {
 
 .axisbuilder-fullscreen-buttons {
 	float: right;
-	margin: 10px 15px 0;
+	margin: 10px 20px 0;
 }
 
 .postbox.axisbuilder-expanded {
@@ -113,8 +113,8 @@ body.axisbuilder-noscroll-box {
 	left: 0;
 	right: 0;
 	background: #F8F8F8;
-	padding: 41px 10px 10px 0;
-	z-index: 120;
+	padding: 41px 0px 10px 0;
+	z-index: 1;
 	-webkit-box-shadow: 0 1px 8px 0px rgba(0,0,0,0.2);
 	-moz-box-shadow: 0 1px 8px 0px rgba(0,0,0,0.2);
 	box-shadow: 0 1px 8px 0px rgba(0,0,0,0.2);
